added markdown files

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,11 @@
-html,
-body {
-  padding: 0;
+
+.bytemd {
+  height: calc(100vh - 50px) !important;
+}
+
+/* .markdown-body blockquote {
+  padding: 0 1em;
+  color: #6a737d;
+  border-left: 0.25em solid #dfe2e5;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
+} */
