--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,12 @@
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-} 
+.container {  
+  margin-left: 270px;
+  max-width: 70vw;
+}
+
+
+@media screen and (max-width: 700px) {
+  .container {
+    margin-left: 100px;
+    border: 1px solid salmon;
+  }
+}
