--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,5 +1,4 @@
 .nav {
-  /* position: absolute; */
   top: 0;
   left: 0;
   bottom: 0;
@@ -17,14 +16,16 @@
   height: 50px;
   border-radius: 50%;
   background: transparent;
+  z-index: 1;
 }
 
 .nav ul {
   margin: 0;
   padding: 25px;
   position: absolute;
-  top: 100px;
+  top: 60px;
   width: 230px;
+  z-index: 1;
 }
 
 .nav li {
@@ -45,7 +46,19 @@
 
 .textPlaceholder {
   border-radius: 5px;
-  width: 200px;
+  width: 140px;
   height: 20px;
   flex: 1;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 270px;
+  background: #F8FAFD
+
+  ;
+  z-index: 1;
 }
