--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,7 +5,11 @@
 .sideItems {
   display: block;
   position: absolute;
-  top: 100px;
+  margin-top: 100px;
+  overflow: hidden;
+  width: 300px;
+  padding: 5px;
+  height: 50vh;
 }
 
 .container {  
