--- a/styles/SideTree.module.css
+++ b/styles/SideTree.module.css
@@ -37,6 +37,7 @@
   border-radius: 0.6818181818182em;
   border: 0.1363636363636em solid #161a2b;
   box-shadow: 0.3181818181818em 0.3181818181818em 0 #fae1dd;
+  cursor: pointer;
 }
 
 .search:hover {
