--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -160,3 +160,9 @@
   background: #cddafd;
   box-shadow: 0.3181818181818em 0.3181818181818em 0 #fad2e1;
 }
+
+.signupWrap {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
